--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,6 @@
 @import '~antd/dist/antd.css';
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
+
+.App {
+  font-family: 'Roboto', sans-serif;
+}
