--- a/src/style/FormNewUser.css
+++ b/src/style/FormNewUser.css
@@ -28,6 +28,12 @@
   background-color: #fff;
 }
 
+.form-item-input {
+  border-style: none;
+  border-radius: 0;
+  border-bottom: 1px solid #d9d9d9;
+}
+
 .checkbox {
   border-radius: 20px;
 }
@@ -43,10 +49,6 @@
   font-weight: bold;
   color: #fff;
   background-color: rgb(255, 0, 55);
-}
-
-.btn-login:hover {
-
 }
 
 .btn-social {
