--- a/src/style/scss/App.scss
+++ b/src/style/scss/App.scss
@@ -1,6 +1,7 @@
-@import '~antd/dist/antd.css';
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
+@import './global.scss';
 
-.App {
+.container {
   font-family: 'Roboto', sans-serif;
+  padding: $padding;
+  background-image: linear-gradient(-90deg, $second-color, $third-color);
 }
