--- a/src/style/scss/FormNewUser.scss
+++ b/src/style/scss/FormNewUser.scss
@@ -1,9 +1,4 @@
-@import './Variables.scss';
-
-.container {
-  padding: $padding;
-  background-image: linear-gradient(-90deg, $second-color, $third-color);
-}
+@import './global.scss';
 
 .title {
   font-weight: $font-strong;
@@ -12,59 +7,12 @@
   color: $second-color-font;
 }
 
-.img-backg {
-  background-image: url('../../assets/plant.jpg');
-  background-position: center;
-  background-size: cover;
-}
-
-.img-block {
-  padding: $padding;
+.img-block-new {
+  @include img-block-base;
   border-radius: 10px 0 0 10px;
-  color: #fff;
 }
 
-.form-block {
-  padding: $padding;
+.form-block-new {
+  @include form-block-base;
   border-radius: 0 10px 10px 0;
-  background-color: #fff;
-}
-
-.form-item-input {
-  border-style: none;
-  border-radius: 0;
-  border-bottom: 1px solid #d9d9d9;
-}
-
-.subtitle {
-  font-weight: $font-strong;
-}
-
-.btn-login {
-  width: 40%;
-  border-style: none;
-  border-radius: $btn-radius;
-  font-weight: $font-strong;
-  color: $second-color-font;
-  background-color: $primary-color;
-}
-
-.btn-social {
-  width: 30%;
-  font-size: 0.85em;
-  border-style: none;
-  border-radius: $btn-radius;
-  color: $second-color-font;
-}
-
-.facebook {
-  background-color: $facebook;
-}
-
-.twitter {
-  background-color: $twitter;
-}
-
-.google {
-  background-color: $google;
 }
