--- a/src/style/scss/_variables.scss
+++ b/src/style/scss/_variables.scss
@@ -5,6 +5,7 @@ $third-color: #CC3E14;
 $facebook: #3b5998;
 $twitter: #1DA1F2;
 $google: #dd4b39;
+$primary-color-font: rgba(0, 0, 0, 0.65);
 $second-color-font: #fff;
 $btn-radius: 20px;
 $font-strong: bold;
