--- a/src/style/scss/_variables.scss
+++ b/src/style/scss/_variables.scss
@@ -1,4 +1,7 @@
-$padding: 5em;
+$padding: 5vw;
+$margin: 2em;
+$short-margin: 1em;
+$justify: 100%;
 $primary-color: #FF0037;
 $second-color: #FF4D73;
 $third-color: #CC3E14;
@@ -9,3 +12,4 @@ $primary-color-font: rgba(0, 0, 0, 0.65);
 $second-color-font: #fff;
 $btn-radius: 20px;
 $font-strong: bold;
+$border-color: #d9d9d9;
