--- a/src/style/scss/App.scss
+++ b/src/style/scss/App.scss
@@ -2,6 +2,6 @@
 
 .container {
   font-family: 'Roboto', sans-serif;
-  padding: $padding;
+  padding: 5em;
   background-image: linear-gradient(-90deg, $second-color, $third-color);
 }
