--- a/src/style/scss/_global.scss
+++ b/src/style/scss/_global.scss
@@ -63,3 +63,15 @@
 .container-vh {
   height: 100vh;
 }
+
+@media (max-width: $breakpoint-large) {
+  .btn-login {
+    width: 100%;
+  }
+}
+
+@media (max-width: $breakpoint-small) {
+  .btn-login {
+    
+  }
+}
