--- a/src/style/scss/_variables.scss
+++ b/src/style/scss/_variables.scss
@@ -13,3 +13,6 @@ $second-color-font: #fff;
 $btn-radius: 20px;
 $font-strong: bold;
 $border-color: #d9d9d9;
+$breakpoint-small: 425px;
+$breakpoint-medium: 525px;
+$breakpoint-large: 1200px;
