--- a/src/style/scss/SocialMedia.scss
+++ b/src/style/scss/SocialMedia.scss
@@ -54,7 +54,7 @@
   }
 }
 
-@media (max-width: $breakpoint-medium) {
+@media (max-width: $breakpoint-small) {
   #btn-social-text {
     display: none;
   }
