--- a/src/style/scss/_variables.scss
+++ b/src/style/scss/_variables.scss
@@ -16,3 +16,4 @@ $border-color: #d9d9d9;
 $breakpoint-small: 425px;
 $breakpoint-medium: 775px;
 $breakpoint-large: 1008px;
+$breakpoint-big: 1920px;
